Fixed nav bar spacing

--- a/Styles/baseStyles.css
+++ b/Styles/baseStyles.css
@@ -61,8 +61,10 @@ h1 {
 
 .nav-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 .nav-list li {
